crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-array-from-spread.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-array-from-spread.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(4);
	const { timestamp } = t0;
	let t1;
	if ($[0] !== timestamp) {
		const t2 = [timestamp];
		let t3;
		if ($[2] !== t2) {
			t3 = [t2];
			$[2] = t2;
			$[3] = t3;
		} else {
			t3 = $[3];
		}
		t1 = new Date(...Array.from(...t3));
		$[0] = timestamp;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
