crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-array-from-string.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-array-from-string.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(1);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = new Date(...Array.from("1"));
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
