crates/oxc_react_compiler/tests/snapshots/new-mutability__valid-new-date-array-spread-copied-arguments.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/new-mutability/valid-new-date-array-spread-copied-arguments.js
---
import { c as _c } from "react/compiler-runtime";
// @validateNoImpureFunctionsInRender @enableNewMutationAliasingModel
function Component(t0) {
	const $ = _c(2);
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const values = [0, 1];
		t1 = [...values];
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	const args = t1;
	let t2;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t2 = new Date(...new Array(...args));
		$[1] = t2;
	} else {
		t2 = $[1];
	}
	return t2;
}
